--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -40,6 +40,7 @@
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <td><%= link_to 'Add User', projects_add_user_path(project.id) %></td>
+		<td><%= link_to 'Remove User', projects_revoke_user_path(project.id) %></td>
 		<% end %>
       </tr>
     <% end %>
