--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -20,5 +20,68 @@
   <%= @project.user.email %>
 </p>
 
+<% @permission_list.each do |mail| %>
+<%= mail %><br />
+<% end %>
+
+<br />
+<%= link_to 'Add an issue', projects_add_issue_path(@project) %>
+<br /><br />
+
+<h2>Current Issues</h2>
+
+<br /><br />
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>Details</th>
+      <th>By</th>
+      <th>Tags</th>
+	  <th>Assigned To</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @issue_list.each do |issue| %>
+    <tr>
+      <td><%= issue.title %></td>
+      <td><%= issue.content %></td>
+      <td><%= User.find(issue.user_id).email %></td>
+      <td><%= issue.tags %></td>
+	  <% if issue.assigned_to %>
+	  <td><%= User.find(issue.assigned_to).email %></td>
+	  <% else %>
+	  <td><%= 'No one' %></td>
+	  <% end %>
+	  <% if user_signed_in? %>
+      <td><%= link_to 'Assign to', projects_assign_to_path(issue.id) %></td>
+	  <% end %>
+	  <% if user_signed_in? && current_user.id == issue.user.id %>
+      <td><%= link_to 'Close Issue', projects_close_issue_path(issue.id) %></td>
+	  <% end %>
+	  <td><%= link_to 'Add Comment', projects_add_comment_path(issue.id) %></td>
+    </tr>
+	<% if @comments_list != [] %>
+	<% @comments_list.each do |comm| %>
+	<% if comm.issue_id == issue.id %>
+	<tr> <td></td>
+	  <td></td><td></td>
+	  <td></td><td></td>
+	  <td></td><td></td>
+	  <td>
+		<%= User.find((comm.user_id)).email %><%=" commented : "%><%=comm.message %>
+	</td> </tr>
+	<% end %>
+	<% end %>
+    <% end %>
+	<% end %>
+  </tbody>
+</table>
+<% if user_signed_in? && current_user.id == @project.user_id %>
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
+<% end %>
+
